<resources>
    <string name="app_name">How</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_first">登录后可操作</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="register">注册</string>
    <string name="register_user">没有账号？去注册</string>
    <string name="register_have">已有账号？去登录</string>
    <string name="forgetPwd_reset">确认重置</string>
    <string name="password_hint">密码</string>
    <string name="password_new_hint">新密码</string>
    <string name="password_old_hint">旧密码</string>
    <string name="password_repeat_hint">再次输入新密码</string>
    <string name="username_hint">请输入用户名</string>
    <string name="telephone_hint">手机号</string>
    <string name="verify_hint">验证码</string>
    <string name="verify_getcode">获取验证码</string>
    <string name="verify_getcode_geting">获取中...</string>
    <string name="post_repeatPwd">修改密码</string>
    <string name="action_settings">Settings</string>
    <string name="password">0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="digits_phone">0123456789</string>
    <string name="refuseSeller">拉黑</string>
    <string name="pick_photo">从相册选取照片</string>
    <string name="look">查看</string>
    <string name="look_more">查看更多</string>
    <string name="look_more_reply">查看更多回复</string>
    <string name="mainpage_ask">问答</string>
    <string name="mainpage_kollist">他们</string>
    <string name="mainpage_myquestion">收到答案</string>
    <string name="mainpage_center">我要问</string>
    <string name="mainpage_more">更多</string>
    <string name="kf">How客服</string>
    <string name="kol_ask_other">问他</string>
    <string name="defalut_nickname">木刻人</string>
    <string name="defalut_act_ont">我是一个板蓝根</string>
    <string name="kol_question">好手用这个商品解决了%1$d个问题</string>
    <string name="at_kol">输入你要@的好手</string>
    <string name="mybehavior" translatable="false">com.prettyyes.user.core.MyBehavior</string>
    <string name="collect_kol">收藏的好手</string>
    <string name="empty_code">验证码不能为空</string>
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="addCartSuccess">添加购物车成功</string>
    <string name="mine_kol_title">我的关注</string>
    <string name="mine_kol_desc">喜欢的、讨厌的、想记得的人</string>
    <string name="mine_wishlist_title">我的购物车</string>
    <string name="mine_wishlist_desc">想得未得，将要未要的物</string>
    <string name="mine_coupon_title">我的优惠券</string>
    <string name="mine_coupon_desc">登录、发问、分享都可获得</string>
    <string name="mine_order_title">我的购买</string>
    <string name="mine_order_desc">评价已购商品可获得优惠券</string>
    <string name="mine_tobe_title">申请成为How的好手</string>
    <string name="mine_tobe_desc">想帮他人解答疑惑请点击</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="radius_simpledialog">2dp</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_test">Prettyyes</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_change_pwd">ChangePwdActivity</string>
    <string name="title_activity_forget_pwd">ForgetPwdActivity</string>
    <string name="rsa">MIICXAIBAAKBgQDg7pCJrxnorQUvKAsIkypdkB2mEtaUuqIowZ/rkZhSdYtlusQwybaIlgaktl9YkTkCFMjNN4UCOhMw/ph5rMTPnXWndK278ySli3LHRNk486BDrVWmoH1WsOa8idUTogSCerG3OCgGtLZTZ0A8kBvbwhwzpBfk/sFFDUpWr4xY8wIDAQABAoGAH2MKxjup2N7z3z2uNHccrUuj532vdbeJUziZkSyS3cbLOdnS8J/lGbAdozRTn688Dj9KOeCqbcIe1XJhYnEqUS9FHEO0USwRIMfXGdRznRkBkyAVJY+JcvfNjHDX4p16dFlsOd1yv5a2sjgr8CYUKj2X2fks2cJxE+sbqejlSvkCQQDy79+XYR9p3iwe8Q7sPUgT6ebXEiZ7yZSgjfj2z5vA+MwNDx/4opggt27tVxkgCgyTC4fwLMeJ8g7a35rThPz1AkEA7QbX8Bg2Ecp3t5aj85GDEPZEmq+fB2u3gNaA8F7PfQXzZsK4Hx2abk77zGcn6o9hAik7rBz5I/812xbPGnLNRwJASRiBtyOi9xDBR8ISUmSR9mPvcBDnAWIC1VhCa8jFvYdepiNB5GbPzTBEMSd+yNQdOnVCvrJKi6gIbjTPegtOrQJAfEmTX42ChK+zOOxfyi9qF7Ha5XXjoOOF1KQl9mTwzfEZ4a+HFqHSQbde557L2n4Wcyil5qlGpu6DEgAS1x6NrwJBAJnC99ZedLiIa8IyLgDR+gJ+Yu2hX/T3Ne6i0hFR87+2d5SA0sa27NyXFjcDCNBRMP6uT+rF5xrkvw65pEbENWI=</string>
    <string name="title_activity_weixin">WeixinActivity</string>
    <string name="title_activity_test_photo">TestPhotoActivity</string>
    <string name="title_activity_photo">PhotoActivity</string>
    <string name="title_activity_view_pager">ViewPagerActivity</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_add_tag">AddTagActivity</string>
    <string name="title_activity_test_state_bar">TestStateBarActivity</string>
    <string name="title_activity_test_main">TestMainActivity</string>
    <string name="title_activity_view_pager_scale">ViewPagerScaleActivity</string>
    <string name="title_activity_input_txt">InputTxtActivity</string>
    <string name="title_activity_address_show">AddressShowActivity</string>
    <string name="title_activity_change_address">ChangeAddressActivity</string>
    <string name="title_activity_more_comment">回复详情</string>
    <string name="title_activity_kol_detail">KolDetailActivity</string>
    <string name="title_activity_kol_info">好手详情</string>
    <string name="title_activity_question">QuestionActivity</string>
    <string name="title_activity_clothes_detail">ClothesDetailActivity</string>
    <string name="title_activity_my_question_detail">MyQuestionDetailActivity</string>
    <string name="title_activity_pay_order">PayOrderActivity</string>
    <string name="title_activity_oredr_list">OredrListActivity</string>
    <string name="title_activity_order_list">OrderListActivity</string>
    <string name="title_activity_order_detail">OrderDetailActivity</string>
    <string name="title_activity_ship_state">ShipStateActivityActivity</string>
    <string name="title_activity_comment_order">CommentOrderActivity</string>
    <string name="title_activity_collection">收藏</string>
    <string name="title_activity_coupon">优惠券</string>
    <string name="title_activity_setting">设置</string>
    <string name="title_activity_myorder">我的购买</string>
    <string name="title_activity_resetPwd">重置密码</string>
    <string name="title_activity_couponshare">分享好友优惠券</string>
    <string name="title_activity_commentInfoList">评论详情</string>
    <string name="title_activity_category">选择分类</string>
    <string name="title_activity_unit_temp">极简模板上传</string>
    <string name="title_activity_taobao_temp">极速模板上传</string>
    <string name="title_activity_paper_temp">内容模板上传</string>
    <string name="title_activity_brand_temp">品牌模板上传</string>
    <string name="title_activity_suit_temp">内容模板上传</string>
    <string name="title_activity_specifications">规格</string>
    <string name="title_activity_spu_list">商品管理</string>
    <string name="title_activity_unit_info">单品详情</string>
    <string name="title_activity_paper_info">内容详情</string>
    <string name="title_activity_paper_richedit">内容编辑</string>
    <string name="title_activity_brand_info">品牌详情</string>
    <string name="title_activity_brand_list">品牌列表</string>
    <string name="title_activity_brand_list_spuinfo">品牌列表详情</string>
    <string name="title_activity_kolreply">添加回复</string>
    <string name="title_activity_invatekol">邀请好手</string>
    <string name="title_activity_myaccount">账户设置</string>
    <string name="title_activity_aliaccount">支付宝绑定</string>
    <string name="title_activity_bankaccount">银行卡绑定</string>
    <string name="title_activity_my_asklist">我的发问</string>
    <string name="title_activity_invate_me">邀请我回复</string>
    <string name="title_activity_my_replyque">我的回复</string>
    <string name="title_activity_sellerorderlist">卖出的订单</string>
    <string name="title_activity_sellerorderinfo">订单详情</string>
    <string name="title_activity_addship">添加物流</string>
    <string name="title_activity_shipCompany">物流公司</string>
    <string name="title_activity_medal">我的How值</string>
    <string name="title_activity_medallist">我的权益列表</string>
    <string-array name="segment_control_arrays_order">
        <item>未付款</item>
        <item>已付款</item>
        <item>退款</item>
        <item>所有打赏</item>
    </string-array>
    <string-array name="segment_control_arrays_message">
        <item>私信</item>
        <item>通知</item>
    </string-array>
    <string name="appbar_home">问答</string>
    <string name="appbar_kol">他们</string>
    <string name="appbar_reply">收到答案</string>
    <string name="appbar_reply_title">问得好回复会更好</string>
    <string name="appbar_mine">更多</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="collect">关注</string>
    <string name="collect_cancel">关注取消</string>
    <string name="share">分享</string>
    <string name="invitate">邀请</string>
    <string name="reply">回复</string>
    <string name="want_reply">想答</string>
    <string name="zeze">啧啧</string>
    <string name="pei">呸</string>
    <string name="socre_total">总分</string>
    <string name="socre">分数</string>
    <string name="ask">提问</string>
    <string name="ask_how_to">发问秘笈</string>
    <string name="search">搜索</string>
    <string name="notify">提醒</string>
    <string name="pwd">密码</string>
    <string name="more">更多</string>
    <string name="login">登录</string>
    <string name="take_photo">拍照</string>
    <string name="select_album">从相册选择</string>
    <string name="price">价格</string>
    <string name="freight">运费</string>
    <string name="category">分类</string>
    <string name="category_select">选择分类</string>
    <string name="rmb">¥</string>
    <string name="taobao">淘宝</string>
    <string name="preview">预览</string>
    <string name="add">添加</string>
    <string name="spftcation_name">规格名称</string>
    <string name="spftcation_introduce">请注意规格名称与规格详情的对应\n一次仅能填写一次规格名称\n点击“添加”才可再次添加其他规格信息</string>
    <string name="spftcation_detail">规格详情</string>
    <string name="spftcation_add">+ 添加更多详情细节</string>
    <string name="spftcation_add_contincue">确定</string>
    <string name="spftcation_add_title">已添加规格</string>
    <string name="suit_add_goods">添加单品</string>
    <string name="suit_good">优点</string>
    <string name="suit_good_hint">填写整个套系的优点</string>
    <string name="suit_bad">缺点</string>
    <string name="suit_bad_hint">填写整个套系的缺点</string>
    <string name="attr_name">输入规格名称,例如尺寸</string>
    <string name="attr_info">输入详细规格属性，例如L或M</string>
    <string name="custom_serve">售后服务</string>
    <string name="custom_serve_title">所有好物均非How平台自营，由认证好手自己采购；带有品牌标记的商品均由品牌提供发货。</string>
    <string name="custom_serve_second_title">How 对商品进行以下保障：</string>
    <string name="custom_serve_content">
        极速物流\n
        所有商品均会在购买后第一时间发货，超过48小时赔付。\n\n
        七天免费退换货\n
        非特殊商品（如内衣等），收货7天内可免费办理退换货服务。\n\n
        先行赔付\n
        好人值较高的用户发起退款后，可以在How平台进行先行赔付，不用等待好手/品牌确认退款。</string>
    <string name="custom_serve_chat">如果有其他任何问题，请联系How客服</string>
    <string name="score_warning_title">提示</string>
    <string name="score_warning_content">切勿回复与问题不符\n
切勿推荐物与回复不符\n
切勿抄袭他人的原创回复\n
切勿恶意刷提问、刷评论、刷分享、刷购买\n
被小编抽查到，将会警告并有相应惩罚！</string>
    <string name="score_exchange_title">How值兑换现金规则
</string>
    <string name="score_exchange_content">累计How总之达到1000分以上\n
即可成为好手兑换现金；\n
好手每20分可兑换1元。\n\n
累计How总值达到10000分以上\n
即可由好手升级成为好厉害；\n
好厉害每10分可兑换1元。</string>
    <string name="score_keeplevel_title">维系等级要求
</string>
    <string name="score_keeplevel_content">好手每月How值不得低于800分；\n
好厉害每月How值不得低于3000分</string>
    <string name="score_range_title">How值兑换限额
</string>
    <string name="score_range_content">每次兑换不低于600分\n
每月兑换上限10000分</string>
    <string name="compose_shortcut_short_label1">发问</string>
    <string name="compose_shortcut_long_label1">发问</string>
    <string name="compose_disabled_message1">发问</string>
    <string name="compose_shortcut_short_label2">搜索</string>
    <string name="compose_shortcut_long_label2">搜索</string>
    <string name="compose_disabled_message2">搜索</string>
</resources>