<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">

    <shortcut
        android:shortcutId="compose1"
        android:enabled="true"
        android:icon="@drawable/add"
        android:shortcutShortLabel="@string/compose_shortcut_short_label1"
        android:shortcutLongLabel="@string/compose_shortcut_long_label1"
        android:shortcutDisabledMessage="@string/compose_disabled_message1"
     >
        <intent
            android:action="android.intent.action.VIEW"

            android:targetPackage="com.prettyyes.user"
            android:targetClass="com.prettyyes.user.app.ui.how.AskActivity" />
        <!-- If your shortcut is associated with multiple intents, include them
             here. The last intent in the list determines what the user sees when
             they launch this shortcut. -->
        <categories android:name="android.shortcut.conversation" />
    </shortcut>


    <shortcut
        android:shortcutId="compose"
        android:enabled="true"
        android:icon="@drawable/link"
        android:shortcutShortLabel="@string/compose_shortcut_short_label2"
        android:shortcutLongLabel="@string/compose_shortcut_long_label2"
        android:shortcutDisabledMessage="@string/compose_disabled_message2"
        >
        <intent
            android:action="android.intent.action.VIEW"

            android:targetPackage="com.prettyyes.user"
            android:targetClass="com.prettyyes.user.app.ui.how.SearchActivity" />
        <!-- If your shortcut is associated with multiple intents, include them
             here. The last intent in the list determines what the user sees when
             they launch this shortcut. -->
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
    <!-- Specify more shortcuts here. -->
</shortcuts>
