<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                            xmlns:app="http://schemas.android.com/apk/res-auto"
                                            xmlns:tools="http://schemas.android.com/tools"
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:layout_marginBottom="@dimen/distance_normal"
                                            android:background="@color/white"
                                            android:fillViewport="true">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context="com.prettyyes.user.app.ui.SpecificationsActivity">


        <TextView
            style="@style/tv_title"
            android:layout_marginLeft="@dimen/distance_normal"
            android:layout_marginRight="@dimen/distance_normal"
            android:layout_marginTop="@dimen/distance_small"
            android:text="@string/notify"
            android:textColor="@color/secondaryTextBlack"/>

        <TextView
            style="@style/tv_content"
            android:layout_marginLeft="@dimen/distance_normal"
            android:layout_marginRight="@dimen/distance_normal"
            android:layout_marginTop="@dimen/distance_small"
            android:gravity="center"
            android:text="@string/spftcation_introduce"
            android:textColor="@color/secondaryTextBlack"/>

        <TextView
            style="@style/tv_title"
            android:layout_gravity="left"
            android:layout_marginLeft="@dimen/distance_normal"
            android:layout_marginTop="@dimen/distance_normal"
            android:text="@string/spftcation_name"
            />

        <EditText
            android:id="@+id/edit_sp_name"
            style="@style/edit_normal_margin_lr"
            android:layout_marginBottom="@dimen/distance_small"
            android:layout_marginTop="@dimen/distance_small"
            android:hint="@string/attr_name"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="@dimen/font_title"/>

        <TextView
            style="@style/tv_title"
            android:layout_gravity="left"
            android:layout_marginLeft="@dimen/distance_normal"
            android:text="@string/spftcation_detail"
            />

        <com.prettyyes.user.app.view.FlowLayout
            android:id="@+id/flowlayout_sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/distance_normal"
            android:layout_marginRight="@dimen/distance_small"
            >

        </com.prettyyes.user.app.view.FlowLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_sp_info"
                style="@style/edit_normal_margin_lr"
                android:layout_marginBottom="@dimen/distance_small"
                android:layout_marginLeft="@dimen/distance_normal"
                android:layout_marginRight="@dimen/distance_normal"
                android:layout_marginTop="@dimen/distance_small"
                android:hint="@string/attr_info"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:paddingRight="@dimen/distance_big_1"
                android:singleLine="true"
                android:textSize="@dimen/font_title"/>

            <TextView

                android:id="@+id/tv_add_sp_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/distance_big"
                android:clickable="true"
                android:text="@string/add"
                android:textColor="@color/theme_red"
                android:visibility="gone"/>


        </RelativeLayout>

        <TextView
            style="@style/tv_title"
            android:layout_gravity="right"
            android:layout_marginRight="@dimen/distance_normal"
            android:text="@string/spftcation_add"
            android:textColor="@color/theme_red"
            android:textSize="@dimen/font_content"
            android:visibility="gone"
            />

        <Button
            android:id="@+id/btn_add"
            style="@style/btn_select_red_round"
            android:layout_width="@dimen/template_btn_width"
            android:layout_height="@dimen/btn_height"
            android:layout_marginTop="@dimen/distance_normal"
            android:text="@string/spftcation_add_contincue"/>

        <com.prettyyes.user.app.view.FlowLayout
            android:id="@+id/flowlayout_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/distance_normal">

            <TextView
                android:id="@+id/tv_have_added"
                style="@style/tv_title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/template_item_height"
                android:background="@color/template_spftcation_item_title"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/distance_normal"
                android:text="@string/spftcation_add_title"
                android:visibility="gone"
                />

            <com.prettyyes.user.app.view.lvandgrid.MoveRecycleview
                android:id="@+id/rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </com.prettyyes.user.app.view.lvandgrid.MoveRecycleview>

        </com.prettyyes.user.app.view.FlowLayout>


    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
