<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_normal"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingTop="40dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_warning_title"
                android:textColor="@color/textBlack"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginTop="@dimen/distance_small"
                android:background="@color/textBlack"/>

        </LinearLayout>

        <TextView
            style="@style/tv_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/distance_normal"
            android:layout_marginRight="@dimen/distance_normal"
            android:layout_marginTop="@dimen/distance_big"
            android:gravity="center"
            android:lineSpacingExtra="2dp"
            android:text="@string/score_warning_content"
            android:textColor="@color/secondaryTextBlack"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/score_exchange_title"
                android:textColor="@color/textBlack"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginTop="@dimen/distance_small"
                android:background="@color/textBlack"/>
        </LinearLayout>

        <TextView
            style="@style/tv_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/distance_normal"
            android:layout_marginRight="@dimen/distance_normal"
            android:layout_marginTop="@dimen/distance_big"
            android:gravity="center"
            android:lineSpacingExtra="2dp"
            android:text="@string/score_exchange_content"
            android:textColor="@color/secondaryTextBlack"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/score_keeplevel_title"
                android:textColor="@color/textBlack"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginTop="@dimen/distance_small"
                android:background="@color/textBlack"/>
        </LinearLayout>

        <TextView
            style="@style/tv_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/distance_normal"
            android:layout_marginRight="@dimen/distance_normal"
            android:layout_marginTop="@dimen/distance_big"
            android:gravity="center"
            android:lineSpacingExtra="2dp"
            android:text="@string/score_keeplevel_content"
            android:textColor="@color/secondaryTextBlack"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/score_range_title"
                android:textColor="@color/textBlack"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginTop="@dimen/distance_small"
                android:background="@color/textBlack"/>
        </LinearLayout>

        <TextView
            style="@style/tv_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/distance_normal"
            android:layout_marginRight="@dimen/distance_normal"
            android:layout_marginTop="@dimen/distance_big"
            android:gravity="center"
            android:lineSpacingExtra="2dp"
            android:text="@string/score_range_content"
            android:textColor="@color/secondaryTextBlack"/>

    </LinearLayout>
</RelativeLayout>